--- a/.github/workflows/deployGhPages.yml
+++ b/.github/workflows/deployGhPages.yml
@@ -47,3 +47,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
