--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-favicon": "^2.0.3",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
